tests/fixtures/valid/try.py
try:  # Check 1
    pass
except:
    pass
finally:
    pass

try:  # Check 2
    pass
except:
    pass
finally:
    pass

"""
Lorem ipsum dolor sit amet
"""
try:  # Check 3
    pass
except:
    pass
finally:
    pass

# Lorem ipsum dolor sit amet
try:  # Check 4
    pass
except:
    pass
finally:
    pass

if 1 == 1:  # Check 5
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
elif 2 == 2:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
else:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass

for i in [1, 2]:  # Check 6
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
else:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass

while True:  # Check 7
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
else:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass

try: # Check 8
    try:
        pass
    except:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
except Exception:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
finally:
    try:
        pass
    except:
        pass
    finally:
        pass

    try:
        pass
    except:
        pass
    finally:
        pass
