tests/fixtures/invalid/continue-7.py
for i in [1, 2]:  # Check 3
    v = 1
    # Lorem ipsum dolor sit amet
    continue

for i in [1, 2]:  # Check 4
    v = 1
    """
    Lorem ipsum dolor sit amet
    """
    continue

for i in [1, 2]:  # Check 5
    a = """
    Multiline string assignment
    """
    continue

for i in [1, 2]:  # Check 6
    v = 1
    continue

for i in [1, 2]:  # Check 7
    continue
    continue

for i in [1, 2]:  # Check 8
    print(1)
    continue

for i in [1, 2]:  # Check 9
    continue
    print(1)
